force-app/main/default/objects/Game_Components__c/fields/Poster_Size__c.field-meta.xml
<CustomField>
    <fullName>Poster_Size__c</fullName>
    <label>Poster Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11&quot; x 11&quot;</fullName>
            </value>
            <value>
                <fullName>11&quot; x 22&quot;</fullName>
            </value>
            <value>
                <fullName>11&quot; x 33&quot;</fullName>
            </value>
            <value>
                <fullName>22&quot; x 22&quot;</fullName>
            </value>
            <value>
                <fullName>22&quot; x 33&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>