force-app/main/default/objects/Game_Components__c/fields/Printing_Color__c.field-meta.xml
<CustomField>
    <fullName>Printing_Color__c</fullName>
    <label>Printing Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Color CMYK</fullName>
                <default>true</default>
                <label>Full Color CMYK</label>
            </value>
            <value>
                <fullName>Black &amp; White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>