force-app/main/default/objects/Game_Components__c/fields/Printing_on_Inside_of_Box__c.field-meta.xml
<CustomField>
    <fullName>Printing_on_Inside_of_Box__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check for printing on both the front and inside of the box.</description>
    <label>Printing on Inside of Box</label>
    <type>Checkbox</type>
</CustomField>