force-app/main/default/objects/Game_Components__c/fields/Printing_Sides__c.field-meta.xml
<CustomField>
    <fullName>Printing_Sides__c</fullName>
    <label>Printing Sides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Side</fullName>
            </value>
            <value>
                <fullName>Two Sides</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>