force-app/main/default/objects/Game_Components__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity Per Game</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>