force-app/main/default/objects/Game_Components__c/fields/Quote_Card_Size__c.field-meta.xml
<CustomField>
    <fullName>Quote_Card_Size__c</fullName>
    <formula>IF(Card_Width__c = 0,TEXT(Card_Size__c),&quot;Custom: &quot; &amp; TEXT(Card_Width__c) &amp; &apos;&quot;&apos; &amp; &quot; x &quot; &amp; TEXT(Card_Length__c) &amp; &apos;&quot;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Card Size</label>
    <type>Text</type>
</CustomField>