force-app/main/default/objects/Game_Components__c/fields/Sequential_Foil_Stamp_Color__c.field-meta.xml
<CustomField>
    <fullName>Sequential_Foil_Stamp_Color__c</fullName>
    <inlineHelpText>Color of the project&apos;s sequential foil stamp.</inlineHelpText>
    <label>Sequential Foil Stamp Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>