force-app/main/default/objects/Game_Components__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0.35&quot; (9mm)</fullName>
            </value>
            <value>
                <fullName>0.47&quot; (12mm)</fullName>
            </value>
            <value>
                <fullName>0.55&quot; (14mm)</fullName>
            </value>
            <value>
                <fullName>0.63&quot; (16mm)</fullName>
            </value>
            <value>
                <fullName>0.71&quot; (18mm)</fullName>
            </value>
            <value>
                <fullName>0.78&quot; (20mm)</fullName>
            </value>
            <value>
                <fullName>0.86&quot; (22mm)</fullName>
            </value>
            <value>
                <fullName>0.98&quot; (25mm)</fullName>
            </value>
            <value>
                <fullName>1.18&quot; (30mm)</fullName>
            </value>
            <value>
                <fullName>1.57&quot; (40mm)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>