force-app/main/default/objects/Game_Components__c/fields/Size_Bag__c.field-meta.xml
<CustomField>
    <fullName>Size_Bag__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3&quot; x 4&quot;</fullName>
            </value>
            <value>
                <fullName>4&quot; x 5&quot;</fullName>
            </value>
            <value>
                <fullName>5&quot; x 7&quot;</fullName>
            </value>
            <value>
                <fullName>8&quot; x 9&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>