force-app/main/default/objects/Game_Components__c/fields/Size_Pad__c.field-meta.xml
<CustomField>
    <fullName>Size_Pad__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4&quot; x 5&quot;</fullName>
            </value>
            <value>
                <fullName>5.5&quot; x 8.5&quot;</fullName>
            </value>
            <value>
                <fullName>8.5&quot; x 11&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>