force-app/main/default/objects/Game_Components__c/fields/Specialty_Options_Record__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Options_Record__c</fullName>
    <label>Specialty Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Foil Stamp</fullName>
            </value>
            <value>
                <fullName>Spot UV</fullName>
            </value>
            <value>
                <fullName>Emboss</fullName>
            </value>
            <value>
                <fullName>Deboss</fullName>
            </value>
            <value>
                <fullName>Sequential Foil Numbering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>