force-app/main/default/objects/Game_Components__c/fields/Texture_Options__c.field-meta.xml
<CustomField>
    <fullName>Texture_Options__c</fullName>
    <inlineHelpText>Pattern of the project&apos;s textured pages.</inlineHelpText>
    <label>Texture Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Texture 1</fullName>
            </value>
            <value>
                <fullName>Texture 2</fullName>
            </value>
            <value>
                <fullName>Texture 3</fullName>
            </value>
            <value>
                <fullName>Texture 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>