force-app/main/default/objects/Game_Components__c/fields/Token_Shape__c.field-meta.xml
<CustomField>
    <fullName>Token_Shape__c</fullName>
    <inlineHelpText>The shape of the tokens on the punch-out sheet.</inlineHelpText>
    <label>Token Shape</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Square or Circle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>