force-app/main/default/objects/Game_Components__c/fields/Type_of_Bag__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Bag__c</fullName>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Linen Cloth - Single Drawstring</fullName>
            </value>
            <value>
                <fullName>Linen Cloth - Double Drawstring</fullName>
            </value>
            <value>
                <fullName>Faux Velvet - Single Drawstring</fullName>
            </value>
            <value>
                <fullName>Faux Velvet - Double Drawstring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>