force-app/main/default/objects/Game_Components__c/fields/Type_of_Box__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Box__c</fullName>
    <label>Type of Box</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Two-Piece Box</fullName>
            </value>
            <value>
                <fullName>Magnetic Box</fullName>
            </value>
            <value>
                <fullName>Tin Box</fullName>
            </value>
            <value>
                <fullName>Custom Box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>