force-app/main/default/objects/Game_Components__c/fields/Type_of_Insert__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Insert__c</fullName>
    <label>Type of Insert</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Sheet</fullName>
            </value>
            <value>
                <fullName>Booklet</fullName>
            </value>
            <value>
                <fullName>Poster</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>