force-app/main/default/objects/Game_Components__c/fields/Type_of_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Instructions__c</fullName>
    <label>Type of Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Card or Box</fullName>
            </value>
            <value>
                <fullName>Booklet</fullName>
            </value>
            <value>
                <fullName>Accordion</fullName>
            </value>
            <value>
                <fullName>Folded Sheet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>