force-app/main/default/objects/Game_Components__c/fields/Type_of_Organizer__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Organizer__c</fullName>
    <label>Type of Organizer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White Plastic</fullName>
            </value>
            <value>
                <fullName>Black Plastic</fullName>
            </value>
            <value>
                <fullName>Clear Plastic</fullName>
            </value>
            <value>
                <fullName>Printed Cardboard</fullName>
            </value>
            <value>
                <fullName>Blank Cardboard</fullName>
            </value>
            <value>
                <fullName>Uncoated Cardboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>