force-app/main/default/objects/Game_Components__c/fields/Type_of_Piece__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Piece__c</fullName>
    <label>Type of Piece</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wood Standard Meeple</fullName>
            </value>
            <value>
                <fullName>Wood Tall Meeple</fullName>
            </value>
            <value>
                <fullName>Wood Standard Pawn</fullName>
            </value>
            <value>
                <fullName>Wood Halma Pawn</fullName>
            </value>
            <value>
                <fullName>Wood Small Cube</fullName>
            </value>
            <value>
                <fullName>Wood Large Cube</fullName>
            </value>
            <value>
                <fullName>Wood Small Disc</fullName>
            </value>
            <value>
                <fullName>Wood Large Disc</fullName>
            </value>
            <value>
                <fullName>Wood Thin Cylinder</fullName>
            </value>
            <value>
                <fullName>Wood Thick Cylinder</fullName>
            </value>
            <value>
                <fullName>Wood Octagon</fullName>
            </value>
            <value>
                <fullName>Wood Cone</fullName>
            </value>
            <value>
                <fullName>Wood Tile</fullName>
            </value>
            <value>
                <fullName>Wood Stick</fullName>
            </value>
            <value>
                <fullName>Wood House</fullName>
            </value>
            <value>
                <fullName>Wood City</fullName>
            </value>
            <value>
                <fullName>Plastic Standard Pawn</fullName>
            </value>
            <value>
                <fullName>Plastic Halma Pawn</fullName>
            </value>
            <value>
                <fullName>Plastic Ball Pawn</fullName>
            </value>
            <value>
                <fullName>Plastic Poker Chip</fullName>
            </value>
            <value>
                <fullName>Plastic Small Chip</fullName>
            </value>
            <value>
                <fullName>Plastic Medium Chip</fullName>
            </value>
            <value>
                <fullName>Plastic Large Chip</fullName>
            </value>
            <value>
                <fullName>Plastic Round Card Stand</fullName>
            </value>
            <value>
                <fullName>Plastic Square Card Stand</fullName>
            </value>
            <value>
                <fullName>Plastic Pyramid Card Stand</fullName>
            </value>
            <value>
                <fullName>Glass Marble</fullName>
            </value>
            <value>
                <fullName>Glass Stone</fullName>
            </value>
            <value>
                <fullName>Arrow Spinner</fullName>
            </value>
            <value>
                <fullName>Pointer Spinner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>