force-app/main/default/objects/Game_Components__c/fields/Variant_Covers__c.field-meta.xml
<CustomField>
    <fullName>Variant_Covers__c</fullName>
    <inlineHelpText>Number of additional variant covers.</inlineHelpText>
    <label>Variant Covers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>