force-app/main/default/objects/Game_Components__c/fields/Variants__c.field-meta.xml
<CustomField>
    <fullName>Variants__c</fullName>
    <inlineHelpText>Total number of pieces with unique artwork (should not exceed total component quantity)</inlineHelpText>
    <label>Variants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>