force-app/main/default/objects/Game_Components__c/fields/Wrapped_Edges__c.field-meta.xml
<CustomField>
    <fullName>Wrapped_Edges__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Wrapped Edges</label>
    <type>Checkbox</type>
</CustomField>