force-app/main/default/objects/Game_Components__c/recordTypes/Bag.recordType-meta.xml
<RecordType>
    <fullName>Bag</fullName>
    <active>true</active>
    <label>Bag</label>
</RecordType>