force-app/main/default/objects/Game_Components__c/recordTypes/Box.recordType-meta.xml
<RecordType>
    <fullName>Box</fullName>
    <active>true</active>
    <label>Box</label>
</RecordType>