force-app/main/default/objects/Game_Components__c/recordTypes/Card_Deck.recordType-meta.xml
<RecordType>
    <fullName>Card_Deck</fullName>
    <active>true</active>
    <label>Card Deck</label>
</RecordType>