force-app/main/default/objects/Game_Components__c/recordTypes/Custom.recordType-meta.xml
<RecordType>
    <fullName>Custom</fullName>
    <active>true</active>
    <label>Custom</label>
</RecordType>