force-app/main/default/objects/Game_Components__c/recordTypes/Dice.recordType-meta.xml
<RecordType>
    <fullName>Dice</fullName>
    <active>true</active>
    <label>Dice</label>
</RecordType>