force-app/main/default/objects/Game_Components__c/recordTypes/Game_Board.recordType-meta.xml
<RecordType>
    <fullName>Game_Board</fullName>
    <active>true</active>
    <label>Game Board</label>
</RecordType>