force-app/main/default/objects/Game_Components__c/recordTypes/Game_Piece.recordType-meta.xml
<RecordType>
    <fullName>Game_Piece</fullName>
    <active>true</active>
    <label>Game Piece</label>
</RecordType>