force-app/main/default/objects/Game_Components__c/recordTypes/Instructions.recordType-meta.xml
<RecordType>
    <fullName>Instructions</fullName>
    <active>true</active>
    <label>Instructions</label>
</RecordType>