force-app/main/default/objects/Game_Components__c/recordTypes/Notepad.recordType-meta.xml
<RecordType>
    <fullName>Notepad</fullName>
    <active>true</active>
    <description>Counted in Sheets, instead of pages</description>
    <label>Notepad</label>
</RecordType>