force-app/main/default/objects/Game_Components__c/recordTypes/Playmat.recordType-meta.xml
<RecordType>
    <fullName>Playmat</fullName>
    <active>true</active>
    <label>Playmat</label>
</RecordType>