force-app/main/default/objects/Game_Components__c/recordTypes/Punch_Out_Sheet.recordType-meta.xml
<RecordType>
    <fullName>Punch_Out_Sheet</fullName>
    <active>true</active>
    <label>Punch-Out Sheet</label>
</RecordType>