force-app/main/default/objects/Game_Components__c/recordTypes/Screen.recordType-meta.xml
<RecordType>
    <fullName>Screen</fullName>
    <active>true</active>
    <label>Screen</label>
</RecordType>