force-app/main/default/objects/Game_Components__c/recordTypes/Tile.recordType-meta.xml
<RecordType>
    <fullName>Tile</fullName>
    <active>true</active>
    <label>Tile</label>
</RecordType>